# remoteOpenFASTplotter

./: .gitignore  .readthedocs.yml  Dockerfile  README.md  app.py  callbacks.py  components.py  data_manager.py  environment.yaml  html_exporter.py  pyproject.toml  requirements.txt  startup.sh  user_preferences.py  utils.py
.github/workflows/: ci-cd.yml
assets/: generate_favicon.py
callbacks/: README.md  __init__.py  annotation_callbacks.py  export_callbacks.py  fft_callbacks.py  file_callbacks.py  file_order_callbacks.py  path_management_callbacks.py  phase_callbacks.py  preference_callbacks.py  signal_callbacks.py  time_domain_callbacks.py  ui_callbacks.py
docs/: annotations.rst  architecture.md  architecture.rst  build_output.txt  conf.py  fft_annotation_guide.md  index.rst  installation.rst  requirements.txt
docs/api/: app.rst  index.rst
docs/development/: contributing.rst  extending.rst  index.rst  testing.rst
docs/examples/: annotations.rst  basic_workflow.rst  fft_analysis.rst  index.rst  phase_analysis.rst  time_series_analysis.rst
docs/user_guide/: getting_started.rst  index.rst
tests/: conftest.py  debug_ui.py  test_annotation_callbacks.py  test_app.py  test_app_with_files.py  test_callback.py  test_callback_modules.py  test_export_callbacks.py  test_fft_analysis.py  test_html_export.py  test_minimal.py  test_preferences.py  test_signal_selection.py  test_user_preferences.py  test_utils.py
tools/: __init__.py  fft_analysis.py  html_export.py  phase_analysis.py  signal_selection.py
utils/: download_test_files.py
