[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "remoteOpenFASTplotter"
version = "0.1.0"
description = "A Dash application for plotting OpenFAST data."
readme = "README.md"
license = { file = "LICENSE" } # Assuming LICENSE file exists at the root
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Specify the actual license if different
    "Operating System :: OS Independent",
    "Framework :: Dash",
]
dependencies = [
    "dash",
    "dash-bootstrap-components",
    "pandas",
    "plotly",
    "pyyaml",
    "numpy",
    "openfast_io",
    "requests",
    "tqdm",
    "scipy>=1.9.0",
    "psutil>=5.9.0"
]

[project.urls]
Homepage = "https://github.com/mayankchetan/remoteOpenFASTplotter" # Replace if different

[project.optional-dependencies]
test = [
    "flake8",
    "pytest",
    "pytest-cov",
    "selenium",
    "playwright"
]
