[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "remoteOpenFASTplotter"
version = "0.1.0"
description = "A Dash application for plotting OpenFAST data."
readme = "README.md"
license = { text = "Apache-2.0" } # Using SPDX identifier for MIT License
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License", # Removed as per deprecation warning
    "Operating System :: OS Independent",
    "Framework :: Dash",
]
dependencies = [
    "dash",
    "dash-bootstrap-components",
    "pandas",
    "plotly",
    "pyyaml",
    "numpy",
    "openfast_io",
    "requests",
    "tqdm",
    "scipy>=1.9.0",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
test = [
    "flake8",
    "pytest",
    "pytest-cov",
    "selenium",
    "playwright"
]

[project.urls]
Homepage = "https://github.com/mayankchetan/remoteOpenFASTplotter"

[tool.setuptools]
# Explicitly list packages (directories containing an __init__.py)
# This refers to the 'callbacks/' and 'tools/' directories.
packages = ["callbacks", "tools"]
